[PPSD-16] Fix on Mobile responsive contact modal

--- a/themes/pukara-theme/assets/sass/main.scss
+++ b/themes/pukara-theme/assets/sass/main.scss
@@ -559,9 +559,10 @@ img.close_btn_img {
     font-size: 0.7rem;
     line-height: 0.75rem;
     text-align: left !important;
+    margin-top: 1vh;
   }
   div.modal-info {
-    margin-top: 3vh;
+    margin-top: 2vh;
   }
   h2.modal-phone,
   h2.modal-address,
